@@ -2,65 +2,39 @@ package com.fiapchallenge.garage.adapters.inbound.controller.serviceorder;
 
 import com.fiapchallenge.garage.adapters.inbound.controller.serviceorder.dto.CreateServiceOrderDTO;
 import com.fiapchallenge.garage.adapters.inbound.controller.serviceorder.dto.StockItemDTO;
-import com.fiapchallenge.garage.application.serviceorder.CancelServiceOrderUseCase;
-import com.fiapchallenge.garage.domain.servicetype.ServiceTypeRepository;
-import com.fiapchallenge.garage.application.serviceorder.CompleteServiceOrderUseCase;
-import com.fiapchallenge.garage.application.serviceorder.CreateServiceOrderUseCase;
-import com.fiapchallenge.garage.application.serviceorder.DeliverServiceOrderUseCase;
-import com.fiapchallenge.garage.application.serviceorder.FinishServiceOrderDiagnosticUseCase;
-import com.fiapchallenge.garage.application.serviceorder.StartServiceOrderDiagnosticUseCase;
-
 import com.fiapchallenge.garage.application.serviceorder.command.CancelServiceOrderCommand;
 import com.fiapchallenge.garage.application.serviceorder.command.CompleteServiceOrderCommand;
 import com.fiapchallenge.garage.application.serviceorder.command.CreateServiceOrderCommand;
 import com.fiapchallenge.garage.application.serviceorder.command.DeliverServiceOrderCommand;
 import com.fiapchallenge.garage.application.serviceorder.command.FinishServiceOrderDiagnosticCommand;
 import com.fiapchallenge.garage.application.serviceorder.command.StartServiceOrderDiagnosticCommand;
-
 import com.fiapchallenge.garage.application.serviceorder.command.StockItemCommand;
 import com.fiapchallenge.garage.domain.serviceorder.ServiceOrder;
 import com.fiapchallenge.garage.domain.serviceorder.ServiceOrderItem;
 import com.fiapchallenge.garage.domain.serviceorder.ServiceOrderRepository;
-import com.fiapchallenge.garage.domain.servicetype.ServiceType;
 import com.fiapchallenge.garage.domain.serviceorder.ServiceOrderStatus;
+import com.fiapchallenge.garage.domain.servicetype.ServiceType;
+import com.fiapchallenge.garage.domain.servicetype.ServiceTypeRepository;
 import jakarta.validation.Valid;
 import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.*;
 
 import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
-import org.springframework.web.bind.annotation.*;
 
 @RestController
 @RequestMapping("/service-orders")
 public class ServiceOrderController implements ServiceOrderControllerOpenApiSpec {
 
-    private final CreateServiceOrderUseCase createServiceOrderUseCase;
-    private final StartServiceOrderDiagnosticUseCase startServiceOrderDiagnosticUseCase;
-    private final FinishServiceOrderDiagnosticUseCase finishServiceOrderDiagnosticUseCase;
-
-    private final CompleteServiceOrderUseCase completeServiceOrderUseCase;
-    private final DeliverServiceOrderUseCase deliverServiceOrderUseCase;
-    private final CancelServiceOrderUseCase cancelServiceOrderUseCase;
+    private final ServiceOrderUseCases useCases;
     private final ServiceOrderRepository serviceOrderRepository;
     private final ServiceTypeRepository serviceTypeRepository;
 
-    public ServiceOrderController(CreateServiceOrderUseCase createServiceOrderUseCase,
-                                 StartServiceOrderDiagnosticUseCase startServiceOrderDiagnosticUseCase,
-                                 FinishServiceOrderDiagnosticUseCase finishServiceOrderDiagnosticUseCase,
-
-                                 CompleteServiceOrderUseCase completeServiceOrderUseCase,
-                                 DeliverServiceOrderUseCase deliverServiceOrderUseCase,
-                                 CancelServiceOrderUseCase cancelServiceOrderUseCase,
+    public ServiceOrderController(ServiceOrderUseCases useCases,
                                  ServiceOrderRepository serviceOrderRepository,
                                  ServiceTypeRepository serviceTypeRepository) {
-        this.createServiceOrderUseCase = createServiceOrderUseCase;
-        this.startServiceOrderDiagnosticUseCase = startServiceOrderDiagnosticUseCase;
-        this.finishServiceOrderDiagnosticUseCase = finishServiceOrderDiagnosticUseCase;
-
-        this.completeServiceOrderUseCase = completeServiceOrderUseCase;
-        this.deliverServiceOrderUseCase = deliverServiceOrderUseCase;
-        this.cancelServiceOrderUseCase = cancelServiceOrderUseCase;
+        this.useCases = useCases;
         this.serviceOrderRepository = serviceOrderRepository;
         this.serviceTypeRepository = serviceTypeRepository;
     }
@@ -79,42 +53,42 @@ public class ServiceOrderController implements ServiceOrderControllerOpenApiSpec
                 createServiceOrderDTO.serviceTypeIdList(),
                 stockItems
         );
-        ServiceOrder serviceOrder = createServiceOrderUseCase.handle(command);
+        ServiceOrder serviceOrder = useCases.getCreateServiceOrderUseCase().handle(command);
         return ResponseEntity.ok(serviceOrder);
     }
 
     @PostMapping("/{id}/in-diagnosis")
     public ResponseEntity<ServiceOrder> setInDiagnosis(@PathVariable UUID id) {
         StartServiceOrderDiagnosticCommand command = new StartServiceOrderDiagnosticCommand(id);
-        ServiceOrder serviceOrder = startServiceOrderDiagnosticUseCase.handle(command);
+        ServiceOrder serviceOrder = useCases.getStartServiceOrderDiagnosticUseCase().handle(command);
         return ResponseEntity.ok(serviceOrder);
     }
 
     @PostMapping("/{id}/awaiting-approval")
     public ResponseEntity<ServiceOrder> setAwaitingApproval(@PathVariable UUID id) {
         FinishServiceOrderDiagnosticCommand command = new FinishServiceOrderDiagnosticCommand(id);
-        ServiceOrder serviceOrder = finishServiceOrderDiagnosticUseCase.handle(command);
+        ServiceOrder serviceOrder = useCases.getFinishServiceOrderDiagnosticUseCase().handle(command);
         return ResponseEntity.ok(serviceOrder);
     }
 
     @PostMapping("/{id}/completed")
     public ResponseEntity<ServiceOrder> setCompleted(@PathVariable UUID id) {
         CompleteServiceOrderCommand command = new CompleteServiceOrderCommand(id);
-        ServiceOrder serviceOrder = completeServiceOrderUseCase.handle(command);
+        ServiceOrder serviceOrder = useCases.getCompleteServiceOrderUseCase().handle(command);
         return ResponseEntity.ok(serviceOrder);
     }
 
     @PostMapping("/{id}/delivered")
     public ResponseEntity<ServiceOrder> setDelivered(@PathVariable UUID id) {
         DeliverServiceOrderCommand command = new DeliverServiceOrderCommand(id);
-        ServiceOrder serviceOrder = deliverServiceOrderUseCase.handle(command);
+        ServiceOrder serviceOrder = useCases.getDeliverServiceOrderUseCase().handle(command);
         return ResponseEntity.ok(serviceOrder);
     }
 
     @PostMapping("/{id}/cancelled")
     public ResponseEntity<ServiceOrder> setCancelled(@PathVariable UUID id) {
         CancelServiceOrderCommand command = new CancelServiceOrderCommand(id);
-        ServiceOrder serviceOrder = cancelServiceOrderUseCase.handle(command);
+        ServiceOrder serviceOrder = useCases.getCancelServiceOrderUseCase().handle(command);
         return ResponseEntity.ok(serviceOrder);
     }
 
@@ -132,9 +106,9 @@ public class ServiceOrderController implements ServiceOrderControllerOpenApiSpec
     @PostMapping("/{id}/stock-items")
     public ResponseEntity<ServiceOrder> addStockItems(@PathVariable UUID id, @RequestBody List<StockItemDTO> stockItems) {
         ServiceOrder serviceOrder = serviceOrderRepository.findByIdOrThrow(id);
-        List<ServiceOrderItem> items = stockItems.stream()
+        List<ServiceOrderItem> items = new java.util.ArrayList<>(stockItems.stream()
                 .map(item -> new ServiceOrderItem(null, item.stockId(), item.quantity()))
-                .collect(java.util.stream.Collectors.toList());
+                .toList());
         serviceOrder.addStockItems(items);
         return ResponseEntity.ok(serviceOrderRepository.save(serviceOrder));
     }
@@ -142,9 +116,9 @@ public class ServiceOrderController implements ServiceOrderControllerOpenApiSpec
     @DeleteMapping("/{id}/stock-items")
     public ResponseEntity<ServiceOrder> removeStockItems(@PathVariable UUID id, @RequestBody List<StockItemDTO> stockItems) {
         ServiceOrder serviceOrder = serviceOrderRepository.findByIdOrThrow(id);
-        List<ServiceOrderItem> items = stockItems.stream()
+        List<ServiceOrderItem> items = new java.util.ArrayList<>(stockItems.stream()
                 .map(item -> new ServiceOrderItem(null, item.stockId(), item.quantity()))
-                .collect(java.util.stream.Collectors.toList());
+                .toList());
         serviceOrder.removeStockItems(items);
         return ResponseEntity.ok(serviceOrderRepository.save(serviceOrder));
     }
@@ -152,9 +126,9 @@ public class ServiceOrderController implements ServiceOrderControllerOpenApiSpec
     @PostMapping("/{id}/service-types")
     public ResponseEntity<ServiceOrder> addServiceTypes(@PathVariable UUID id, @RequestBody List<UUID> serviceTypeIds) {
         ServiceOrder serviceOrder = serviceOrderRepository.findByIdOrThrow(id);
-        List<ServiceType> serviceTypes = serviceTypeIds.stream()
+        List<ServiceType> serviceTypes = new java.util.ArrayList<>(serviceTypeIds.stream()
                 .map(serviceTypeRepository::findByIdOrThrow)
-                .collect(java.util.stream.Collectors.toList());
+                .toList());
         serviceOrder.addServiceTypes(serviceTypes);
         return ResponseEntity.ok(serviceOrderRepository.save(serviceOrder));
     }
@@ -162,9 +136,9 @@ public class ServiceOrderController implements ServiceOrderControllerOpenApiSpec
     @DeleteMapping("/{id}/service-types")
     public ResponseEntity<ServiceOrder> removeServiceTypes(@PathVariable UUID id, @RequestBody List<UUID> serviceTypeIds) {
         ServiceOrder serviceOrder = serviceOrderRepository.findByIdOrThrow(id);
-        List<ServiceType> serviceTypes = serviceTypeIds.stream()
+        List<ServiceType> serviceTypes = new java.util.ArrayList<>(serviceTypeIds.stream()
                 .map(serviceTypeRepository::findByIdOrThrow)
-                .collect(java.util.stream.Collectors.toList());
+                .toList());
         serviceOrder.removeServiceTypes(serviceTypes);
         return ResponseEntity.ok(serviceOrderRepository.save(serviceOrder));
     }
